; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_object_api.c_git_blob_lookup_prefix.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_object_api.c_git_blob_lookup_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OBJECT_BLOB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_blob_lookup_prefix(i32** %0, i32* %1, i32* %2, i64 %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store i32** %0, i32*** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i32**, i32*** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = load i64, i64* %8, align 8
  %13 = load i32, i32* @GIT_OBJECT_BLOB, align 4
  %14 = call i32 @git_object_lookup_prefix(i32** %9, i32* %10, i32* %11, i64 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @git_object_lookup_prefix(i32**, i32*, i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
